[0.7.11][tweak] fix flex align in mini-cart & shop loop header

--- a/styles/templates/_mini-cart.scss
+++ b/styles/templates/_mini-cart.scss
@@ -50,6 +50,7 @@
 		padding-top: var(--spacing--20);
 		padding-bottom: var(--spacing--20);
 		display: flex;
+		align-items: start;
 
 		@include max-width(400px) {
 			max-width: 95vw;
